force-app/main/default/objects/OA_Enrichment_Source__mdt/OA_Enrichment_Source__mdt.object-meta.xml
<CustomObject>
    <label>OA Enrichment Source</label>
    <pluralLabel>OA Enrichment Sources</pluralLabel>
</CustomObject>