force-app/main/default/objects/OA_Enrichment_Source__mdt/fields/Authoritative_For__c.field-meta.xml
<CustomField>
    <fullName>Authoritative_For__c</fullName>
    <label>Authoritative For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>