force-app/main/default/objects/OA_Enrichment_Source__mdt/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>