force-app/main/default/objects/OA_Enrichment_Source__mdt/fields/Precedence__c.field-meta.xml
<CustomField>
    <fullName>Precedence__c</fullName>
    <label>Precedence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>